--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "login_final_mihael",
-  "version": "1.1.2-beta.3",
+  "version": "1.1.3",
   "description": "Archivo css para login html",
   "main": "login_final.css", 
   "scripts": {
